# wayggle-bg

./: Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.config/: hakari.toml
crates/ws-hack/: Cargo.toml
nix/: preset.nix
shader/: example-vert.glsl
shaders/: box.glsl  default-frag.glsl
src/: adaptors.rs  app_state.rs  cli.rs  cursor_support.rs  graphics.rs  main.rs  rendering_pipeline_builder.rs  wayland_app.rs
src/graphics/: glsl_compiler.rs  wgpu_backend.rs  wgpu_wayland_integration.rs
src/render_graph/: conf_reader.rs  configuration.rs
src/render_graph/conf_reader/: tests.rs
src/render_graph/conf_reader/nix/: default.nix  mkTransform.nix
src/render_graph/configuration/: tests.rs
src/render_graph/configuration/nix/: mkTexture.nix  mkTransform.nix
src/render_graph/configuration/test_nix/: renderGraph.nix
src/rendering_pipeline_builder/: conf_reader.rs  flatten_graph.rs  misc_to_mermaid.rs
src/rendering_pipeline_builder/conf_reader/: json_reader.rs  nix_reader.rs  tests.rs
src/rendering_pipeline_builder/conf_reader/nix/: lib.nix
src/rendering_pipeline_builder/conf_reader/test_nix/: renderGraph.nix
src/wayland_app/: app_state.rs  graphics.rs
