[package]
name = "wayggle-bg"
version = "1.0.0"
edition = "2024"
authors = ["Daisuke Matsunami (Comavius) <comavius@proton.me>"]
description = "Dynamically rendered wallpaper for Wayland powered by shader technology"

[dependencies]
# Graphics Libraries
khronos-egl = { version = "6.0.0", features = ["static"] }
glow = "0.16.0"
# Wayland protocol
wayland-client = "0.31.10"
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
wayland-egl = "0.32.7"
# Application
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.42", features = ["derive"] }
snix-eval = { git = "https://git.snix.dev/snix/snix.git", rev = "d89202f5a2db180474deb31b717c2554a6004895", features = [
    "impure",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
tracing-test = "0.2.5"
