[package]
name = "wayggle-bg"
version = "1.0.0"
edition = "2024"
authors = ["Daisuke Matsunami (Comavius) <comavius@proton.me>"]
description = "Dynamically rendered wallpaper for Wayland powered by shader technology"


[dependencies]
# Graphics Libraries
khronos-egl = { version = "6.0.0", features = ["static"] }
glow = "0.16.0"
vulkano = "0.35.2"
shaderc = "0.10.1"
stb_image = "0.3.0"

# Wayland protocol
wayland-client = "0.31.10"
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
wayland-egl = "0.32.7"

# Application
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }

# User Interface
clap = { version = "4.5.42", features = ["derive"] }
tvix-eval = { git = "https://github.com/tvlfyi/tvix.git", rev = "a392c813e011be428941e593a5fd22eeb9d87484", features = [
    "impure",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[dev-dependencies]
tracing-test = "0.2.5"
