[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Daisuke Matsunami (Comavius) <comavius@proton.me>"]
description = "Dynamically rendered wallpaper for Wayland powered by shader technology"


[workspace.dependencies]
wgpu = "27.0.1"
raw-window-handle = "0.6.2"
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-egl = "0.32.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-test = "0.2.5"
anyhow = "1.0.100"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.51", features = ["derive"] }
snix-eval = { git = "https://git.snix.dev/snix/snix.git", rev = "e33040a3e1a500e73dd8a4c2b9e793d7cb85384f", features = [
    "impure",
] }
serde = { version = "1.0.228", features = ["derive"] }
rhai = "1.23.6"
serde_json = "1.0.139"
chrono = "0.4.42"

winit = "0.30.12"
pollster = "0.4.0"


[workspace.metadata.crane]
name = "wayggle-bg"
